# pacman-final-project

./: CMakeLists.txt  PROPOSAL.md  gitignore  main.cpp  map.txt
apps/: CMakeLists.txt  cinder_app_main.cc  my_app.cc  my_app.h
include/: game_over.h  ghost.h  map.h  my_app.h  pacman.h  pacman_engine.h  power_up.h  snack.h  wall.h
src/: CMakeLists.txt  game_over.cc  ghost.cc  map.cc  my_app.cc  pacman.cc  pacman_engine.cc  power_up.cc  snack.cc  wall.cc
tests/: CMakeLists.txt  test_ghost.cc  test_main.cc  test_map.txt  test_pacman.cc
